--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,18 @@
-Source: mu
+Source: mu-editor
 Section: python
 Priority: optional
-Maintainer: Serge Schneider <serge@raspberrypi.org>
-Build-Depends: debhelper (>= 9), dh-python, python3-all, python3-setuptools
+Maintainer: Keith Packard <keithp@keithp.com>
+Build-Depends: debhelper (>= 9), dh-python, python3, python3-setuptools
 Standards-Version: 3.9.8
 Homepage: https://codewith.mu/
 X-Python3-Version: >= 3.2
 
-Package: mu
+Package: mu-editor
 Architecture: all
-Depends: ${python3:Depends}, ${misc:Depends}, python3-pyqt5.qtserialport
+Depends: ${python3:Depends}, ${misc:Depends},
+ python3-pyqt5, python3-appdirs, python3-pyflakes, python3-pycodestyle, python3-serial, python3-pyqt5.qtserialport,
+ python3-qtconsole, python3-pyqt5.qsci, python3-semver, black,
+ python3-flask, python3-nudatus, python3-pgzero
 Description: A simple editor for beginner programmers
  A very simple code editor for kids, teachers and beginner programmers.
  It's written in Python and works on Windows, OSX, Linux and Raspberry Pi.
