--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Package: mu-editor
 Architecture: all
 Depends: ${python3:Depends}, ${misc:Depends},
  python3-pyqt5, python3-appdirs, python3-pyflakes, python3-pycodestyle, python3-serial, python3-pyqt5.qtserialport,
- python3-qtconsole, python3-pyqt5.qsci, python3-semver, black,
+ python3-qtconsole, python3-pyqt5.qtchart, python3-pyqt5.qsci, python3-semver, black,
  python3-flask, python3-nudatus, python3-pgzero
 Description: A simple editor for beginner programmers
  A very simple code editor for kids, teachers and beginner programmers.
